--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <title>inicio</title>
-    <a href="site/index.html">Site Pessoal</a>
 <body>
 <h1>Ola mundo</h1>
+    <ol>
+        <li><a href="site/index.html">Site Pessoal</a></li>
+    </ol>
 </body>
 </html>
